<resources>
    <string name="app_name">CipherBox</string>
    <string name="login_button_text">Login</string>
    <string name="info_login_text">Password:</string>
    <string name="title_activity_menu">CipherBox</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_path" translatable="false">CipherBox/</string>

    <string name="prefs_button_text">Prefs</string>
    <string name="file_processing_text">Please wait...</string>
    <string name="add_button_text">Add new file</string>
    <string name="permission_getter_label">Please, grant the following permission…</string>
    <string name="open_file_item">Open</string>
    <string name="decrypt_file_item">Decrypt and save</string>
    <string name="delete_file_item">Delete</string>
    <string name="info_login_iv_text">Initialization Vector:</string>
    <string name="cipher_file_names_switch_summary">Ciphering file names makes cryptanalysis more difficult. Also it hides information about what you store. This option only affects new files, already stored files will not change</string>
    <string name="cipher_file_names_switch_title">Cipher file names</string>
    <string name="pref_path_display_name">Storage path</string>
    <string name="deletion_dialog_yes">Yes (safe)</string>
    <string name="deletion_dialog_no">No</string>
    <string name="deletion_dialog_yes_unsafe">Yes(fast)</string>
    <string name="deletion_dialog_title">Deleting file</string>
    <string name="deletion_dialog_on_adding">Delete source file?</string>
    <string name="deletion_dialog_on_tmp">Delete temp file?</string>
    <string name="deletion_dialog_on_permanent">Delete file from CipherBox?</string>
    <string name="file_chooser_select_this">Select this directory</string>
    <string name="file_processor_processing">Processing…</string>
    <string name="file_processor_deleting">Deleting…</string>
    <string name="pref_hide_unsafe_deletion_title">Hide unsafe deletion option</string>
    <string name="pref_hide_unsafe_deletion_summary">Safe deletion rewrites file with nonsensical data. This process needs some time to be finished, but it makes file restoration impossible. For safety reason it is strongly recommended not to use unsafe deletion. Use this only if your files are really large.</string>
    <string name="pref_hide_unsafe_deletion_option_key" translatable="false">hide_unsafe_deletion_option</string>
    <string name="pref_cipher_file_names_key" translatable="false">cipher_file_names_key</string>
    <string name="pref_storage_path_key" translatable="false">storage_path_key</string>
    <string name="file_add_dialog_ok">OK</string>
    <string name="file_add_dialog_title">Adding file</string>
    <string name="file_add_dialog_password">Password:</string>
    <string name="file_add_dialog_iv">IV</string>
    <string name="file_add_dialog_permission_error">Permissions not granted! Launch CipherBox and grant permissions</string>
    <string name="pref_login_method_title">Login method</string>
    <string name="pref_login_method_summary">Recommended method is Password. Graphical login is UNSAFE due to low combination number</string>
    <string name="pref_login_method_key">login_method_key</string>
    <string name="message_file_exists">File %s  already exists. Rename file and retry</string>
    <string name="message_error_title">Error</string>
    <string name="message_wrong_key">Wrong key!</string>
    <string name="message_not_a_file">Data must be a local file!</string>
    <string name="message_permissions_not_granted">Some permissions were not granted. Start application from icon and grant permissions!</string>
    <string name="message_file_not_found">File not found!</string>
    <string name="message_no_activity">No activity to open this file</string>
    <string name="pref_fakepwd_key">fakepwd_key</string>
    <string name="pref_fakepwd_title">Fake password</string>
    <string name="pref_fakepwd_summary">If anybody enters fake password, CipherBox displays random files from your gallery. This element is displayed in preferences only if fake password is not set or was entered</string>
    <string name="pref_fakepwd_default"></string>

</resources>
