<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="cipher_file_names_key"
        android:summary="@string/cipher_file_names_switch_summary"
        android:title="@string/cipher_file_names_switch_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_path"
        android:inputType="textCapWords"
        android:key="storage_path_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_path_display_name" />


</PreferenceScreen>
